--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             keeping track of using three functional buttons that can either increment, decrement, or reset the value.
             <br><br>
             Use cases are infinte, solution and working is simple.
-            <br>This emphasizes two points:
+            <br>This emphasizes three points:
             <br>
             <br>&bullet; I'm a genius
             <br>&bullet; I a solve world class problem
