--- a/about.html
+++ b/about.html
@@ -22,10 +22,9 @@
             </div>
         </div>
         <h6>
-            ew, what in the name of the lord is this design? why so messed up? what happened to you (me) in your (mine)
-            childhood? three buttons you (me) can't arrange properly? tf.
-            <br><br>
-            idc, sorry but everyone's not an *artist*. but hey, constructive criticism is welcomed :x
+            ew, why is the design so bad? the buttons too big?
+            <br>
+            idk, sorry but everyone's not an *artist*. but hey, constructive criticism is welcomed :x
             <br><br>
             yeah right like people are gonna make their lives totally dependant on this program.
             <br><br>
@@ -41,9 +40,11 @@
             <br><br>
             Thanks for viewing, for further research, here's my social footprint:
             <br>&rarr; <a href="https://www.linkedin.com/in/sairohitp/" target="_blank">LinkedIn</a>
+            <br>&rarr; <a href="mailto:sairohitp007@gmail.com">e-mail</a>
             <br><br>
-            And to capture the bts (behind the scenes, not your little boy band), <br>you can view the code at:
+            And to capture the bts (behind the scenes, not your little boy band), <br>This project can be found in my GitHub as well:
             <br>&rarr; <a href="https://github.com/sairohitp/counter" target="_blank">Github Repo</a>
+            <br><br>&copy; 2022 ThinkStrange – Contact for tweaks / Comment in the repo.
         </h6>
     </section>
 </body>
